load("//bazel:defs.bzl", "nt_rust_library", "nt_rust_test")

package(default_visibility = ["//visibility:public"])

# MCPS-014: client-side ambassador. Pure library — depends only on the
# verification crate plus serde_json (request construction). No networking/async.
nt_rust_library(
    name = "mcp_re_host",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "mcp_re_host",
    edition = "2021",
    deps = [
        "//mcp-re-client-core:mcp_re_client_core",
        "//mcp-re-core:mcp_re_core",
        # MCPS-033: OS CSPRNG for the production nonce source. Not networking/async.
        "@crates_mcp_re//:getrandom",
        "@crates_mcp_re//:serde_json",
    ],
)

# ADR-MCPS-048 / #220 (feature-flavor handling, cf. MCPS-69): a `test-fixtures`-enabled
# flavor of the SAME crate. FixedClock / SeededNonceSource are cfg'd behind
# `#[cfg(any(test, feature = "test-fixtures"))]` (audit #81 — kept off the production
# surface). In-workspace demo/test targets that consume those deterministic fixtures
# depend on THIS flavor, matching the Cargo `mcp-re-host = { features = ["test-fixtures"] }`
# dev-dep. Same `crate_name`, so consumers still `use mcp_re_host::…`; a target links
# EITHER this or `:mcp_re_host`, never both (one crate name). The plain `:mcp_re_host`
# stays fixture-free for production consumers.
nt_rust_library(
    name = "mcp_re_host_test_fixtures",
    srcs = glob(["src/**/*.rs"]),
    crate_features = ["test-fixtures"],
    crate_name = "mcp_re_host",
    edition = "2021",
    deps = [
        "//mcp-re-client-core:mcp_re_client_core",
        "//mcp-re-core:mcp_re_core",
        "@crates_mcp_re//:getrandom",
        "@crates_mcp_re//:serde_json",
    ],
)