[package]
name = "mcp-re-http-profile"
version = "0.12.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "MCP-RE HTTP standards profile (ADR-MCPRE-050) — RFC 9421 HTTP Message Signatures + RFC 9530 Content-Digest carrier, minimal proof path. Pure: no networking/async/fs."

[dependencies]
# ADR-MCPRE-050 (v0.11 grill A.1): the HTTP standards profile is a NEW crate
# beside the native profile; mcp-re-core stays transport-agnostic and is reused
# only for its pure primitives (Ed25519 signing/verification, base64url) and the
# frozen wire-code taxonomy. This crate models the HTTP message shape itself and
# MUST NOT pull in any networking/async/fs crate — transport adaptation lives in
# the layers above (proxy/transport), mirroring the mcp-re-client-core seam rule.
mcp-re-core = { path = "../mcp-re-core" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }

[lib]
name = "mcp_re_http_profile"
path = "src/lib.rs"
