load("//bazel:defs.bzl", "nt_rust_binary", "nt_rust_library", "nt_rust_test")

package(default_visibility = ["//visibility:public"])

# MCPS-019..023 (Phase 5, ADR-MCPS-013): delegated authorization. Pure library —
# depends only on the verification crate plus serde/serde_json. No networking/async
# (firewall: ADR-MCPS-011/012).
nt_rust_library(
    name = "mcp_re_policy",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "mcp_re_policy",
    edition = "2021",
    deps = [
        "//mcp-re-core:mcp_re_core",
        "@crates_mcp_re//:serde",
        "@crates_mcp_re//:serde_json",
        "@crates_mcp_re//:thiserror",
    ],
)

# Unit tests for the Phase 5 abstraction (trait object-safety, error taxonomy,
# decision, authorization block extraction, revocation source, reference profile,
# policy evaluator).
nt_rust_test(
    name = "mcp_re_policy_test",
    crate = ":mcp_re_policy",
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        "//mcp-re-core:mcp_re_core",
        "@crates_mcp_re//:serde",
        "@crates_mcp_re//:serde_json",
        "@crates_mcp_re//:thiserror",
    ],
)

# MCPS-022: generator for the Phase 5 conformance vectors. Uses mcp-re-host to mint
# genuinely signed requests; emits the committed JSON to stdout. Run via:
#   bazel run //mcp-re-policy:gen_phase5_vectors > \
#     components/mcp-re/mcp-re-policy/tests/vectors/phase5_vectors.json
nt_rust_binary(
    name = "gen_phase5_vectors",
    srcs = ["conformance/gen_vectors.rs"],
    edition = "2021",
    deps = [
        ":mcp_re_policy",
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-host:mcp_re_host",
        "@crates_mcp_re//:serde_json",
    ],
)